append media to post response
