# services/api-gateway/docs/swagger.json
@@ -2138,6 +2138,29 @@
                 }
             }
         },
+        "dto.MediaResponse": {
+            "type": "object",
+            "properties": {
+                "height": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "mime_type": {
+                    "type": "string"
+                },
+                "size_bytes": {
+                    "type": "integer"
+                },
+                "url": {
+                    "type": "string"
+                },
+                "width": {
+                    "type": "integer"
+                }
+            }
+        },
         "dto.PostResponse": {
             "type": "object",
             "properties": {
@@ -2161,6 +2184,12 @@
                 },
                 "like_count": {
                     "type": "integer"
+                },
+                "medias": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.MediaResponse"
+                    }
                 },
                 "reply_count": {
                     "type": "integer"
